--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "glob": "^4.0.5"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "skeleton"
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
